add topic list
